# lab-copilot-gateway

./: .dockerignore  .gitignore  .markdownlint.json  Dockerfile  Makefile  README.md  package-lock.json  pyproject.toml
.github/workflows/: ci.yml
.plans/cloning-strategy-v3/: PLAN.md
.plans/opencloning-step-visibility/handoffs/: T1.md  T10.md  T11.md  T13.md  T4.md  T5.md  T9.md
.plans/wallac-context-token-fix/: PLAN.md
src/lab_copilot_gateway/: __init__.py  app.py  approval.py  artifact_bundle.py  audit.py  auth.py  bentolab.py  config.py  elabftw.py  identity.py  igem_registry.py  mcp_adapter.py  mcp_bindings.py  mcp_pubmed.py  ncbi_search.py  opencloning.py  opencloning_artifacts.py  opencloning_features.py  opencloning_previews.py  opencloning_reports.py  opencloning_steps.py  opencloning_validation.py  plan.py  plan_executor.py  policy.py  protocol_lookup.py  strategy.py  strategy_catalog.py  strategy_executor.py  strategy_run_store.py  strategy_service.py  strategy_telemetry.py  strategy_validation.py  strategy_worker.py  tools.py  wallac.py
tests/: test_app.py  test_approval.py  test_artifact_bundle.py  test_audit.py  test_bentolab.py  test_c14_keycloak_auth.py  test_elabftw.py  test_elabftw_write.py  test_identity.py  test_igem_registry.py  test_mcp_adapter.py  test_mcp_pubmed.py  test_ncbi_search.py  test_opencloning.py  test_opencloning_artifacts.py  test_opencloning_contract.py  test_opencloning_e2e.py  test_opencloning_features.py  test_opencloning_previews.py  test_opencloning_reports.py  test_opencloning_steps.py  test_opencloning_validation.py  test_plan.py  test_plan_executor.py  test_policy.py  test_protocol_lookup.py  test_strategy.py  test_strategy_catalog.py  test_strategy_executor.py  test_strategy_executor_methods.py  test_strategy_run_store.py  test_strategy_service.py  test_strategy_telemetry.py  test_tools.py  test_wallac.py
