[project]
name = "lab-copilot-gateway"
version = "0.1.0"
description = "Policy and audit gateway for the Lambda Biolab eLabFTW lab copilot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.0,<1.0.0",
    "pyjwt[crypto]>=2.8.0,<3.0.0",
    "requests>=2.31,<3.0.0",
    "uvicorn[standard]>=0.35.0,<1.0.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.0,<1.0.0",
    "pytest>=8.0.0,<9.0.0",
    "ruff>=0.12.0,<1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pyright]
include = ["src"]
pythonVersion = "3.11"
