[project]
name = "lab-copilot-gateway"
version = "0.1.0"
description = "Policy and audit gateway for the Lambda Biolab eLabFTW lab copilot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.0,<1.0.0",
    "mcp>=1.28.1,<2",
    "pyjwt[crypto]>=2.8.0,<3.0.0",
    "requests>=2.31,<3.0.0",
    "uvicorn[standard]>=0.35.0,<1.0.0",
]

[dependency-groups]
dev = [
    "complexipy>=0.8",
    "httpx>=0.28.0,<1.0.0",
    "pytest>=8.0.0,<9.0.0",
    "pytest-asyncio>=0.24.0,<1.0.0",
    "ruff>=0.12.0,<1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
# Start from ruff defaults (E4, E7, E9, F) and add complexity gates.
select = [
    "E4",   # pycodestyle (default)
    "E7",   # pycodestyle (default)
    "E9",   # pycodestyle (default)
    "F",    # pyflakes (default)
    "C90",  # mccabe cyclomatic complexity
    "PLR0911",  # too-many-returns
    "PLR0912",  # too-many-branches
    "PLR0913",  # too-many-args
    "PLR0915",  # too-many-statements
]
# TODO: existing modules exceed these thresholds (64 violations across 9 files).
# Refactor incrementally; until then complexipy (cognitive ≤15) is the enforced
# gate via `make complexity`. Remove these ignores once the debt is paid down.
ignore = [
    "C901",     # mccabe max-complexity=15
    "PLR0911",  # max-returns=15
    "PLR0912",  # max-branches=15
    "PLR0913",  # max-args=8
    "PLR0915",  # max-statements=60
]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.pylint]
max-returns = 15
max-branches = 15
max-args = 8
max-statements = 60

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.pyright]
include = ["src"]
pythonVersion = "3.11"
